# course_6_homeworks

./: .gitignore  README.md  data.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/fixture/: category_data.json  product_data.json
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0002_product_manufactured_at.py  0003_alter_product_options.py
catalog/templates/catalog_app/: base.html  blank.html  contact.html  home.html  index.html  product_1.html  product_2.html  product_3.html  product_4.html  product_5.html  product_6.html
catalog/templates/catalog_app/includes/: inc_base.html  inc_product_1.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
main/: urls.py  views.py
